<resources>
    <string name="app_name">LeagueManager</string>
    <string name="duluthCurl">Duluth Curling Club</string>
    <string name="pickLeague">Choose Your League</string>
    <string name="pickTeam">Choose Your Team</string>
    <string name="teamNameHere">Team Name Goes Here</string>
    <string name="submitScore">Submit Score</string>
    <string name="enterScore">Score</string>
    <string name="addScore">Enter Final Score</string>
    <string name="viewSchedule">View Schedule</string>
    <string name="opponent">Opponent</string>
    <string name="viewWeb">View DCC Website</string>
    <string name="teamIDPref">NO_PREF</string>
    <string name="DCCLogo">DCC Logo</string>
<<<<<<< HEAD
    <string name="team_ID">Enter your team ID</string>
=======
    <string name="teamID">Enter your teams ID</string>
>>>>>>> a5863ab74ec7c07bbf0fd8924891be47dc867cf9
</resources>
