<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_home_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.umn.d.cs4531.leaguemanager.HomeScreen">

    <ImageView
        android:contentDescription= "@+id/DCCLogo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/transparentlogo"
        android:layout_toStartOf="@+id/textView"
        android:id="@+id/imageView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/duluthCurl"
        android:textColor="#000000"
        android:textSize="20sp"
        android:id="@+id/textView"
        android:layout_marginTop="21dp"
        android:layout_alignParentTop="true"
        android:layout_alignEnd="@+id/addScoreButton"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/listView"
        android:text="@string/pickLeague"
        android:textAlignment="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp" />
    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/leagueSpinner"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/listView"
        android:layout_centerHorizontal="true">
        </Spinner>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pickTeam"
        android:text="@string/pickTeam"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/leagueSpinner"
        android:layout_alignStart="@+id/listView"
        android:layout_centerHorizontal="true"/>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/pickTeam"
        android:id="@+id/teamSpinner"
        android:layout_centerHorizontal="true">
        </Spinner>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/addScoreButton"
        android:onClick="addScore"
        android:text="@string/addScore"
        android:layout_below="@+id/teamSpinner"
        android:layout_alignStart="@+id/createLeagueButton"
        android:layout_marginTop="32dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/viewSchedule"
        android:text="@string/viewSchedule"
        android:onClick="viewSchedule"
        android:layout_marginTop="22dp"
        android:layout_below="@+id/createLeagueButton"
        android:layout_alignStart="@+id/createLeagueButton"
        android:layout_alignEnd="@+id/textView"
        android:layout_centerHorizontal="true"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/createLeagueButton"
        android:text="@string/createLeague"
        android:onClick="createLeague"
        android:layout_marginTop="18dp"
        android:layout_below="@+id/addScoreButton"
        android:layout_alignStart="@+id/listView"
        android:layout_alignEnd="@+id/DCCWebsite"
        android:layout_centerHorizontal="true"/>

    <!--
    This button will eventually attach to the duluth curling club
    website as Jim suggested
    -->
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/viewWeb"
        android:id="@+id/DCCWebsite"
        android:onClick="goToWebsite"
        android:layout_below="@+id/viewSchedule"
        android:layout_alignStart="@+id/pickTeam"
        android:layout_marginTop="23dp"
        android:layout_centerHorizontal="true"/>
</RelativeLayout>
